[package]
name = "garage-mqtt-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
rumqttc = "0.24"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
rustls = "0.23"
rustls-pemfile = "2.1"
